# mcareader

./: mcareader.cabal
mcareader/: .gitignore  .project  mcareader.cabal
mcareader/src/: Minecraft.hs
